# dovecot-virtual-keywords-plugin

./: CMakeLists.txt  FindDovecot.cmake  README.md  virtual-keywords-plugin.c  virtual-keywords-plugin.h
